openconnect: Support use of a proxy server
Allow connection via a proxy server (required on some sites where
direct outbound HTTP(S) access is not permitted).

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/net/openconnect/README
+++ b/net/openconnect/README
@@ -11,6 +11,7 @@ config interface 'MYVPN'
 	option password 'secret'
 	option serverhash 'AE7FF6A0426F0A0CD0A02EB9EC3C5066FAEB0B25'
 	option defaultroute '0'
+	# option proxy 'http://proxy.example.com:8080'
 	option authgroup 'DEFAULT'
 	# usergroup option, if required by some servers
 	# option usergroup 'USERGROUP'
